<resources>
    <string name="app_name">NewsDroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_background">News background</string>
    <string name="btn_detail_text">Detail</string>
    <string name="new_detail">Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.Johns Hopkins Üniversitesinin derlediği verilere göre, dün ülke genelinde kutlanan İşçi Bayramı\'nın (Labor Day) ardından, Kovid-19\'a yakalananların sayısı 40 milyon 28 bini geride bırakırken virüs nedeniyle ölenlerin sayısı 650 bine yaklaştı.</string>
    <string name="new_title">ABD\'de korkutan veri! 40 milyon barajını aştı</string>
    <string name="new_topic">Sağlık</string>
    <string name="toolbar_title">NewsDroid</string>
    <string name="search">Search</string>
</resources>