<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".news.DetailNewsFragment">
    <data>
        <variable
            name="news"
            type="com.gloorystudio.newsdroid.model.News" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/ivBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/news_background"
                    android:scaleType="centerCrop"
                    app:imageResource="@{news.img}"
                    tools:src="@drawable/news_two" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvDataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center|top"
            android:alpha="0.9"
            android:translationZ="90dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:strokeWidth="3dp">

            <ScrollView
                android:id="@+id/svDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proxi"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@{news.title}"
                        tools:text="@string/new_title" />

                    <TextView
                        android:id="@+id/tvNewDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:paddingBottom="10dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/proxi"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:text="@{news.detail}"
                        tools:text="@string/new_detail" />
                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>