<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".news.SmallNewFragment">
    <data>
        <variable
            name="mainActivity"
            type="com.gloorystudio.newsdroid.MainActivity" />
        <variable
            name="news"
            type="com.gloorystudio.newsdroid.model.News" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:alpha="0.9"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:strokeWidth="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> mainActivity.instance.onFragmentOnClick(news)}">

            <TextView
                android:id="@+id/tvNewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/proxi"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvNewDesc"
                app:layout_constraintStart_toEndOf="@+id/cvNewImage"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@{news.title}"
                tools:text="@string/new_title" />

            <TextView
                android:id="@+id/tvNewDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/proxi"
                android:maxLines="3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvNewImage"
                app:layout_constraintTop_toBottomOf="@+id/tvNewTitle"
                android:text="@{news.detail}"
                tools:text="@string/new_detail" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvNewImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/news_background"
                        android:scaleType="centerCrop"
                        app:imageResource="@{news.img}"
                        tools:src="@drawable/news_two" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>